Major refactoring compiles.